Integrated the chat with the frontend & fixed issues